removed TODO from mod-level doc

--- a/ecs_client/index.html
+++ b/ecs_client/index.html
@@ -47,15 +47,13 @@
                 [<span class='inner'>&#x2212;</span>]
             </a>
         </span><a id='src-0' class='srclink' href='../src/ecs_client/lib.rs.html#1-7' title='goto source code'>[src]</a></span></h1>
-<h2 id='reexports' class='section-header'><a href="#reexports">Reexports</a></h2>
-<table><tr><td><code>extern crate std as std;</code></td></tr><tr><td><code>extern crate hyper;</code></td></tr><tr><td><code>use std::prelude::<a class='mod' href='https://doc.rust-lang.org/nightly/std/prelude/v1/index.html' title='std::prelude::v1'>v1</a>::*;</code></td></tr></table><h2 id='modules' class='section-header'><a href="#modules">Modules</a></h2>
+<h2 id='modules' class='section-header'><a href="#modules">Modules</a></h2>
 <table>
                     <tr class=' module-item'>
                         <td><a class='mod' href='ecs_client/index.html'
                                title='ecs_client::ecs_client'>ecs_client</a></td>
                         <td class='docblock short'>
-                             <p>This module contains the ECSClient which can be used to interact with Amazon ECS&#39;s API.
-TODO provide examples</p>
+                             <p>This module contains the ECSClient which can be used to interact with Amazon ECS&#39;s API.</p>
 
                         </td>
                     </tr>
