--- a/ecs_client/params/struct.ListClustersParams.html
+++ b/ecs_client/params/struct.ListClustersParams.html
@@ -48,16 +48,9 @@
             </a>
         </span><a id='src-78' class='srclink' href='../../src/ecs_client/params.rs.html#5-11' title='goto source code'>[src]</a></span></h1>
 <pre class='rust struct'>pub struct ListClustersParams {
-    max_results: <a class='enum' href='https://doc.rust-lang.org/nightly/core/option/enum.Option.html' title='core::option::Option'>Option</a>&lt;<a class='primitive' href='https://doc.rust-lang.org/nightly/std/primitive.u8.html'>u8</a>&gt;,
-    next_token: <a class='enum' href='https://doc.rust-lang.org/nightly/core/option/enum.Option.html' title='core::option::Option'>Option</a>&lt;<a class='struct' href='https://doc.rust-lang.org/nightly/collections/string/struct.String.html' title='collections::string::String'>String</a>&gt;,
+    // some fields omitted
 }</pre><div class='docblock'><p>allowed parameters for a ListClusters request</p>
-</div><h2 class='fields'>Fields</h2>
-<table><tr class='stab '>
-                                  <td id='structfield.max_results'><code>max_results</code></td><td><div class='docblock'><p>must be between 1 and 100, inclusive; defaults to 100 if missing or invalid</p>
-</div></td></tr><tr class='stab '>
-                                  <td id='structfield.next_token'><code>next_token</code></td><td><div class='docblock'><p>an optional token returned by a previous ListClusters request indicating where to start
-the next page of paginated output (if there are more results than max_results)</p>
-</div></td></tr></table></section>
+</div></section>
     <section id='search' class="content hidden"></section>
 
     <section class="footer"></section>
