re-generated docs with the correct command from assignment page

--- a/ecs_client/region/index.html
+++ b/ecs_client/region/index.html
@@ -48,7 +48,8 @@
             </a>
         </span><a id='src-18' class='srclink' href='../../src/ecs_client/region.rs.html#1-33' title='goto source code'>[src]</a></span></h1>
 <div class='docblock'><p>An enum defining the regions in which Amazon ECS is supported.</p>
-</div><h2 id='enums' class='section-header'><a href="#enums">Enums</a></h2>
+</div><h2 id='reexports' class='section-header'><a href="#reexports">Reexports</a></h2>
+<table><tr><td><code>use std::prelude::<a class='mod' href='https://doc.rust-lang.org/nightly/std/prelude/v1/index.html' title='std::prelude::v1'>v1</a>::*;</code></td></tr><tr><td><code>use std::fmt::{<a class='trait' href='https://doc.rust-lang.org/nightly/core/fmt/trait.Display.html' title='core::fmt::Display'>Display</a>, <a class='struct' href='https://doc.rust-lang.org/nightly/core/fmt/struct.Formatter.html' title='core::fmt::Formatter'>Formatter</a>, <a class='struct' href='https://doc.rust-lang.org/nightly/core/fmt/struct.Error.html' title='core::fmt::Error'>Error</a>};</code></td></tr></table><h2 id='enums' class='section-header'><a href="#enums">Enums</a></h2>
 <table>
                     <tr class=' module-item'>
                         <td><a class='enum' href='enum.Region.html'
