--- a/ecs_client/ecs_client/index.html
+++ b/ecs_client/ecs_client/index.html
@@ -48,7 +48,8 @@
             </a>
         </span><a id='src-5' class='srclink' href='../../src/ecs_client/ecs_client.rs.html#1-25' title='goto source code'>[src]</a></span></h1>
 <div class='docblock'><p>This module contains the ECSClient which can be used to interact with Amazon ECS&#39;s API.</p>
-</div><h2 id='structs' class='section-header'><a href="#structs">Structs</a></h2>
+</div><h2 id='reexports' class='section-header'><a href="#reexports">Reexports</a></h2>
+<table><tr><td><code>use std::prelude::<a class='mod' href='https://doc.rust-lang.org/nightly/std/prelude/v1/index.html' title='std::prelude::v1'>v1</a>::*;</code></td></tr><tr><td><code>use region::<a class='enum' href='../../ecs_client/region/enum.Region.html' title='ecs_client::region::Region'>Region</a>;</code></td></tr><tr><td><code>use <a class='mod' href='https://hyperium.github.io/hyper/hyper/index.html' title='hyper'>hyper</a>;</code></td></tr></table><h2 id='structs' class='section-header'><a href="#structs">Structs</a></h2>
 <table>
                     <tr class=' module-item'>
                         <td><a class='struct' href='struct.ECSClient.html'
