--- a/ecs_client/ecs_client/struct.ECSClient.html
+++ b/ecs_client/ecs_client/struct.ECSClient.html
@@ -48,8 +48,12 @@
             </a>
         </span><a id='src-9' class='srclink' href='../../src/ecs_client/ecs_client.rs.html#6-9' title='goto source code'>[src]</a></span></h1>
 <pre class='rust struct'>pub struct ECSClient {
-    // some fields omitted
-}</pre><h2 id='methods'>Methods</h2><h3 class='impl'><code>impl <a class='struct' href='../../ecs_client/ecs_client/struct.ECSClient.html' title='ecs_client::ecs_client::ECSClient'>ECSClient</a></code></h3><div class='impl-items'><h4 id='method.new' class='method'><code>fn <a href='#method.new' class='fnname'>new</a>(region: <a class='enum' href='../../ecs_client/region/enum.Region.html' title='ecs_client::region::Region'>Region</a>) -&gt; <a class='struct' href='../../ecs_client/ecs_client/struct.ECSClient.html' title='ecs_client::ecs_client::ECSClient'>ECSClient</a></code></h4>
+    region: <a class='enum' href='../../ecs_client/region/enum.Region.html' title='ecs_client::region::Region'>Region</a>,
+    client: <a class='struct' href='https://hyperium.github.io/hyper/hyper/client/struct.Client.html' title='hyper::client::Client'>Client</a>,
+}</pre><h2 class='fields'>Fields</h2>
+<table><tr class='stab '>
+                                  <td id='structfield.region'><code>region</code></td><td></td></tr><tr class='stab '>
+                                  <td id='structfield.client'><code>client</code></td><td></td></tr></table><h2 id='methods'>Methods</h2><h3 class='impl'><code>impl <a class='struct' href='../../ecs_client/ecs_client/struct.ECSClient.html' title='ecs_client::ecs_client::ECSClient'>ECSClient</a></code></h3><div class='impl-items'><h4 id='method.new' class='method'><code>fn <a href='#method.new' class='fnname'>new</a>(region: <a class='enum' href='../../ecs_client/region/enum.Region.html' title='ecs_client::region::Region'>Region</a>) -&gt; <a class='struct' href='../../ecs_client/ecs_client/struct.ECSClient.html' title='ecs_client::ecs_client::ECSClient'>ECSClient</a></code></h4>
 <div class='docblock'><p>creates a new ECSClient for the specified Region</p>
 </div><h4 id='method.set_region' class='method'><code>fn <a href='#method.set_region' class='fnname'>set_region</a>(&amp;mut self, region: <a class='enum' href='../../ecs_client/region/enum.Region.html' title='ecs_client::region::Region'>Region</a>)</code></h4>
 <div class='docblock'><p>sets the Region to which the client sends requests</p>
