--- a/ecs_client/index.html
+++ b/ecs_client/index.html
@@ -47,7 +47,8 @@
                 [<span class='inner'>&#x2212;</span>]
             </a>
         </span><a id='src-0' class='srclink' href='../src/ecs_client/lib.rs.html#1-7' title='goto source code'>[src]</a></span></h1>
-<h2 id='modules' class='section-header'><a href="#modules">Modules</a></h2>
+<h2 id='reexports' class='section-header'><a href="#reexports">Reexports</a></h2>
+<table><tr><td><code>extern crate std as std;</code></td></tr><tr><td><code>extern crate hyper;</code></td></tr><tr><td><code>use std::prelude::<a class='mod' href='https://doc.rust-lang.org/nightly/std/prelude/v1/index.html' title='std::prelude::v1'>v1</a>::*;</code></td></tr></table><h2 id='modules' class='section-header'><a href="#modules">Modules</a></h2>
 <table>
                     <tr class=' module-item'>
                         <td><a class='mod' href='ecs_client/index.html'
