--- a/ecs_client/params/index.html
+++ b/ecs_client/params/index.html
@@ -49,7 +49,8 @@
         </span><a id='src-76' class='srclink' href='../../src/ecs_client/params.rs.html#1-11' title='goto source code'>[src]</a></span></h1>
 <div class='docblock'><p>Defines structs which contain the relevant parameters for each type of request to Amazon ECS.
 Each can be serialized to a json blob and set as the body of the HTTP request.</p>
-</div><h2 id='structs' class='section-header'><a href="#structs">Structs</a></h2>
+</div><h2 id='reexports' class='section-header'><a href="#reexports">Reexports</a></h2>
+<table><tr><td><code>use std::prelude::<a class='mod' href='https://doc.rust-lang.org/nightly/std/prelude/v1/index.html' title='std::prelude::v1'>v1</a>::*;</code></td></tr></table><h2 id='structs' class='section-header'><a href="#structs">Structs</a></h2>
 <table>
                     <tr class=' module-item'>
                         <td><a class='struct' href='struct.ListClustersParams.html'
