--- a/ecs_client/request/index.html
+++ b/ecs_client/request/index.html
@@ -48,13 +48,24 @@
             </a>
         </span><a id='src-41' class='srclink' href='../../src/ecs_client/request.rs.html#1-82' title='goto source code'>[src]</a></span></h1>
 <div class='docblock'><p>A Signature Version 4 Signable AWS Request to ECS</p>
-</div><h2 id='structs' class='section-header'><a href="#structs">Structs</a></h2>
+</div><h2 id='reexports' class='section-header'><a href="#reexports">Reexports</a></h2>
+<table><tr><td><code>use std::prelude::<a class='mod' href='https://doc.rust-lang.org/nightly/std/prelude/v1/index.html' title='std::prelude::v1'>v1</a>::*;</code></td></tr><tr><td><code>use std::<a class='mod' href='https://doc.rust-lang.org/nightly/core/mem/index.html' title='core::mem'>mem</a>;</code></td></tr><tr><td><code>use hyper::client::<a class='struct' href='https://hyperium.github.io/hyper/hyper/client/struct.RequestBuilder.html' title='hyper::client::RequestBuilder'>RequestBuilder</a>;</code></td></tr><tr><td><code>use hyper::header::{<a class='struct' href='https://hyperium.github.io/hyper/hyper/header/common/host/struct.Host.html' title='hyper::header::common::host::Host'>Host</a>, <a class='struct' href='https://hyperium.github.io/hyper/hyper/header/common/accept_encoding/struct.AcceptEncoding.html' title='hyper::header::common::accept_encoding::AcceptEncoding'>AcceptEncoding</a>, <a class='struct' href='https://hyperium.github.io/hyper/hyper/header/common/content_type/struct.ContentType.html' title='hyper::header::common::content_type::ContentType'>ContentType</a>};</code></td></tr><tr><td><code>use hyper::mime::{<a class='struct' href='https://hyperium.github.io/mime.rs/mime/struct.Mime.html' title='mime::Mime'>Mime</a>, <a class='enum' href='https://hyperium.github.io/mime.rs/mime/enum.TopLevel.html' title='mime::TopLevel'>TopLevel</a>, <a class='enum' href='https://hyperium.github.io/mime.rs/mime/enum.SubLevel.html' title='mime::SubLevel'>SubLevel</a>};</code></td></tr><tr><td><code>use region::<a class='enum' href='../../ecs_client/region/enum.Region.html' title='ecs_client::region::Region'>Region</a>;</code></td></tr></table><h2 id='structs' class='section-header'><a href="#structs">Structs</a></h2>
 <table>
                     <tr class=' module-item'>
                         <td><a class='struct' href='struct.ECSRequest.html'
                                title='ecs_client::request::ECSRequest'>ECSRequest</a></td>
                         <td class='docblock short'>
                              
+                        </td>
+                    </tr>
+                </table><h2 id='constants' class='section-header'><a href="#constants">Constants</a></h2>
+<table>
+                    <tr class=' module-item'>
+                        <td><a class='constant' href='constant.AMZ_SUBLEVEL_CONTENT_TYPE.html'
+                               title='ecs_client::request::AMZ_SUBLEVEL_CONTENT_TYPE'>AMZ_SUBLEVEL_CONTENT_TYPE</a></td>
+                        <td class='docblock short'>
+                             <p>The MIME sublevel content type of an ECS HTTP request body</p>
+
                         </td>
                     </tr>
                 </table></section>
