added documentation to request module

--- a/ecs_client/index.html
+++ b/ecs_client/index.html
@@ -83,7 +83,8 @@
                            <td><a class='mod' href='request/index.html'
                                   title='ecs_client::request'>request</a></td>
                            <td class='docblock short'>
-                                
+                                <p>This module defines request types which can be serialized to json and set as the payload of an
+HTTP request body.</p>
                            </td>
                        </tr>
                        <tr class=' module-item'>
