--- a/ecs_client/action/list_clusters/struct.ListClustersRequest.html
+++ b/ecs_client/action/list_clusters/struct.ListClustersRequest.html
@@ -7,7 +7,7 @@
     <meta name="description" content="API documentation for the Rust `ListClustersRequest` struct in crate `ecs_client`.">
     <meta name="keywords" content="rust, rustlang, rust-lang, ListClustersRequest">
 
-    <title>ecs_client::request::list_clusters::ListClustersRequest - Rust</title>
+    <title>ecs_client::action::list_clusters::ListClustersRequest - Rust</title>
 
     <link rel="stylesheet" type="text/css" href="../../../rustdoc.css">
     <link rel="stylesheet" type="text/css" href="../../../main.css">
@@ -28,7 +28,7 @@
 
     <nav class="sidebar">
         
-        <p class='location'><a href='../../index.html'>ecs_client</a>::<wbr><a href='../index.html'>request</a>::<wbr><a href='index.html'>list_clusters</a></p><script>window.sidebarCurrent = {name: 'ListClustersRequest', ty: 'struct', relpath: ''};</script><script defer src="sidebar-items.js"></script>
+        <p class='location'><a href='../../index.html'>ecs_client</a>::<wbr><a href='../index.html'>action</a>::<wbr><a href='index.html'>list_clusters</a></p><script>window.sidebarCurrent = {name: 'ListClustersRequest', ty: 'struct', relpath: ''};</script><script defer src="sidebar-items.js"></script>
     </nav>
 
     <nav class="sub">
@@ -43,15 +43,18 @@
     </nav>
 
     <section id='main' class="content struct">
-<h1 class='fqn'><span class='in-band'>Struct <a href='../../index.html'>ecs_client</a>::<wbr><a href='../index.html'>request</a>::<wbr><a href='index.html'>list_clusters</a>::<wbr><a class='struct' href=''>ListClustersRequest</a></span><span class='out-of-band'><span id='render-detail'>
+<h1 class='fqn'><span class='in-band'>Struct <a href='../../index.html'>ecs_client</a>::<wbr><a href='../index.html'>action</a>::<wbr><a href='index.html'>list_clusters</a>::<wbr><a class='struct' href=''>ListClustersRequest</a></span><span class='out-of-band'><span id='render-detail'>
                    <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                        [<span class='inner'>&#x2212;</span>]
                    </a>
-               </span><a id='src-70' class='srclink' href='../../../src/ecs_client/media/sf_rust/project/target/debug/build/ecs_client-8e0ed6fefc86c107/out/lib.rs.html#103-112' title='goto source code'>[src]</a></span></h1>
+               </span><a id='src-146' class='srclink' href='../../../src/ecs_client/home/user/rust/project/target/debug/build/ecs_client-615153cc2887025e/out/lib.rs.html#185-194' title='goto source code'>[src]</a></span></h1>
 <pre class='rust struct'>pub struct ListClustersRequest {
     maxResults: <a class='enum' href='https://doc.rust-lang.org/nightly/core/option/enum.Option.html' title='core::option::Option'>Option</a>&lt;<a class='primitive' href='https://doc.rust-lang.org/nightly/std/primitive.u8.html'>u8</a>&gt;,
     nextToken: <a class='enum' href='https://doc.rust-lang.org/nightly/core/option/enum.Option.html' title='core::option::Option'>Option</a>&lt;<a class='struct' href='https://doc.rust-lang.org/nightly/collections/string/struct.String.html' title='collections::string::String'>String</a>&gt;,
-}</pre><h2 class='fields'>Fields</h2>
+}</pre><div class='docblock'><p>A ListClusters request type which can be serialized to json and set as the body of an HTTP
+request.  Construct one of these and pass it to your client in the ecs_client::list_clusters()
+function.</p>
+</div><h2 class='fields'>Fields</h2>
 <table><tr class='stab '>
                              <td id='structfield.maxResults'><code>maxResults</code></td><td><div class='docblock'><p>The max number of cluster results returned in paginated output.
 Must be between 1 and 100, inclusive.
@@ -60,9 +63,11 @@ If omitted, defaults to 100.</p>
                              <td id='structfield.nextToken'><code>nextToken</code></td><td><div class='docblock'><p>The value returned from a previous paginated request.
 Pagination continues from the end of the previous results that returned the value.
 The value returned is null if there are no more results to return.</p>
-</div></td></tr></table><h2 id='implementations'>Trait Implementations</h2><h3 class='impl'><code>impl <a class='trait' href='https://serde-rs.github.io/serde/serde/serde/ser/trait.Serialize.html' title='serde::ser::Serialize'>Serialize</a> for <a class='struct' href='../../../ecs_client/request/list_clusters/struct.ListClustersRequest.html' title='ecs_client::request::list_clusters::ListClustersRequest'>ListClustersRequest</a></code></h3><div class='impl-items'><h4 id='method.serialize' class='method'><code>fn <a href='https://serde-rs.github.io/serde/serde/serde/ser/trait.Serialize.html#tymethod.serialize' class='fnname'>serialize</a>&lt;__S&gt;(&amp;self, _serializer: &amp;mut __S) -&gt; <a class='enum' href='https://doc.rust-lang.org/nightly/core/result/enum.Result.html' title='core::result::Result'>Result</a>&lt;<a class='primitive' href='https://doc.rust-lang.org/nightly/std/primitive.tuple.html'>()</a>, __S::Error&gt; <span class='where'>where __S: <a class='trait' href='https://serde-rs.github.io/serde/serde/serde/ser/trait.Serializer.html' title='serde::ser::Serializer'>Serializer</a></span></code></h4>
-</div><h3 class='impl'><code>impl <a class='trait' href='../../../ecs_client/request/ecs_request/trait.ECSRequest.html' title='ecs_client::request::ecs_request::ECSRequest'>ECSRequest</a> for <a class='struct' href='../../../ecs_client/request/list_clusters/struct.ListClustersRequest.html' title='ecs_client::request::list_clusters::ListClustersRequest'>ListClustersRequest</a></code></h3><div class='docblock'><p>Used so that a ListClustersRequest can be passed as a generic ECSRequest.</p>
-</div><div class='impl-items'></div><h3 id='derived_implementations'>Derived Implementations </h3><h3 class='impl'><code>impl <a class='trait' href='https://doc.rust-lang.org/nightly/core/fmt/trait.Debug.html' title='core::fmt::Debug'>Debug</a> for <a class='struct' href='../../../ecs_client/request/list_clusters/struct.ListClustersRequest.html' title='ecs_client::request::list_clusters::ListClustersRequest'>ListClustersRequest</a></code></h3><div class='impl-items'><h4 id='method.fmt' class='method'><code>fn <a href='https://doc.rust-lang.org/nightly/core/fmt/trait.Debug.html#tymethod.fmt' class='fnname'>fmt</a>(&amp;self, __arg_0: &amp;mut <a class='struct' href='https://doc.rust-lang.org/nightly/core/fmt/struct.Formatter.html' title='core::fmt::Formatter'>Formatter</a>) -&gt; <a class='type' href='https://doc.rust-lang.org/nightly/core/fmt/type.Result.html' title='core::fmt::Result'>Result</a></code></h4>
+</div></td></tr></table><h2 id='methods'>Methods</h2><h3 class='impl'><code>impl <a class='struct' href='../../../ecs_client/action/list_clusters/struct.ListClustersRequest.html' title='ecs_client::action::list_clusters::ListClustersRequest'>ListClustersRequest</a></code></h3><div class='docblock'><p>Implements some convenience methods for building a ListClustersRequest.</p>
+</div><div class='impl-items'><h4 id='method.new' class='method'><code>fn <a href='#method.new' class='fnname'>new</a>() -&gt; Self</code></h4>
+</div><h2 id='implementations'>Trait Implementations</h2><h3 class='impl'><code>impl <a class='trait' href='https://serde-rs.github.io/serde/serde/serde/ser/trait.Serialize.html' title='serde::ser::Serialize'>Serialize</a> for <a class='struct' href='../../../ecs_client/action/list_clusters/struct.ListClustersRequest.html' title='ecs_client::action::list_clusters::ListClustersRequest'>ListClustersRequest</a></code></h3><div class='impl-items'><h4 id='method.serialize' class='method'><code>fn <a href='https://serde-rs.github.io/serde/serde/serde/ser/trait.Serialize.html#tymethod.serialize' class='fnname'>serialize</a>&lt;__S&gt;(&amp;self, _serializer: &amp;mut __S) -&gt; <a class='enum' href='https://doc.rust-lang.org/nightly/core/result/enum.Result.html' title='core::result::Result'>Result</a>&lt;<a class='primitive' href='https://doc.rust-lang.org/nightly/std/primitive.tuple.html'>()</a>, __S::Error&gt; <span class='where'>where __S: <a class='trait' href='https://serde-rs.github.io/serde/serde/serde/ser/trait.Serializer.html' title='serde::ser::Serializer'>Serializer</a></span></code></h4>
+</div><h3 class='impl'><code>impl <a class='trait' href='../../../ecs_client/action/ecs_action/trait.ECSRequest.html' title='ecs_client::action::ecs_action::ECSRequest'>ECSRequest</a> for <a class='struct' href='../../../ecs_client/action/list_clusters/struct.ListClustersRequest.html' title='ecs_client::action::list_clusters::ListClustersRequest'>ListClustersRequest</a></code></h3><div class='docblock'><p>Used so that a ListClustersRequest can be passed as a generic ECSRequest.</p>
+</div><div class='impl-items'></div><h3 id='derived_implementations'>Derived Implementations </h3><h3 class='impl'><code>impl <a class='trait' href='https://doc.rust-lang.org/nightly/core/fmt/trait.Debug.html' title='core::fmt::Debug'>Debug</a> for <a class='struct' href='../../../ecs_client/action/list_clusters/struct.ListClustersRequest.html' title='ecs_client::action::list_clusters::ListClustersRequest'>ListClustersRequest</a></code></h3><div class='impl-items'><h4 id='method.fmt' class='method'><code>fn <a href='https://doc.rust-lang.org/nightly/core/fmt/trait.Debug.html#tymethod.fmt' class='fnname'>fmt</a>(&amp;self, __arg_0: &amp;mut <a class='struct' href='https://doc.rust-lang.org/nightly/core/fmt/struct.Formatter.html' title='core::fmt::Formatter'>Formatter</a>) -&gt; <a class='type' href='https://doc.rust-lang.org/nightly/core/fmt/type.Result.html' title='core::fmt::Result'>Result</a></code></h4>
 </div></section>
     <section id='search' class="content hidden"></section>
 
